# thorax_truetype

./: CMakeLists.txt
include/thorax_truetype/: grid_builder.h  grid_types.h  grids.h  thorax_bridge.h  thorax_truetype.h
include/thorax_truetype/renderer/: FontRenderInfo.h  ShapeBuilder.h  drawcontext.h  types.h
source/: grid_builder.cpp  thorax_bridge.cpp  thorax_truetype.cpp
source/renderer/: FontRenderInfo.cpp  ShapeBuilder.cpp  bvh.cpp  drawcontext.cpp
